# singleapplication

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  singleapplication.pri  singleapplication.pro  version.pri
.github/workflows/: ci.yml  release.yml
.travis/: before_install.sh
cmake/: FindCppStd.cmake  FindQt.cmake  FindQtLib.cmake  GeneratePkgConfig.cmake  LibBuildType.cmake  pkg-config-template.pc.in
qmake/: pkgconfig.pri
src/: CMakeLists.txt  pkgconfig.pri  qt_version_check.pri  singleapplication.cpp  singleapplication.hpp  singleapplication_global.hpp  src.pro  version.pri
tests/: CMakeLists.txt  tests.pri  tests.pro  tst_singleapplicationtest.cpp
travis/: after_success.sh  before_install.sh  before_script.sh  build-library.sh  build.sh  check.sh  run.sh  script.sh
